<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">花椒校园通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search">查询</string>
    <string name="into_app">开始使用</string>
    
    <string name="net_error_tip">当前网络不可用，请检查你的网络设置</string>
    
    <string name="tabbar_item1">动态</string>
    <string name="tabbar_item2">查询</string>
    <string name="tabbar_item3">主页</string>
    <string name="tabbar_item4">课表</string>
    <string name="tabbar_item5">更多</string>
    
     <string name="comment_1">评论</string>
    
    <string name="copyright_1">copyright © 2013 CERT(计算机紧急响应组) corporation. All Right Reserved</string>
    <string name="copyright">copyright © 2013 pw&amp;pgy corporation. All Right Reserved</string>
    
    <string name="day">天</string>
    
    <string name="continue_last_search">继续上次查询</string>
    <string name="search_my_score">查询我的成绩</string>
    
    
    <string name="my_library_info">我的借书信息</string> 	
	<string name="login_library">登录图书馆</string>
	<string name="library_login_id">请输入你的学号或者借书证号</string>
	<string name="library_login_pwd">请输入图书馆密码</string>
	<string name="library_tip">如果你还没登录过图书馆或者没有设置过图书馆密码，可以不用输入密码直接登录</string> 
	<string name="renew">续借</string> 
	
	<string name="cet_name">请输入你的名字</string>
	<string name="cet_zuz">请输入四六级准考证号</string>
	<string name="cet_search_id">查询准考证号</string>
	

    <string name="term">学期</string>
     <string name="grade">年级</string>
    <string name="classname">班级</string>
    <string name="please_select_class">请选择你的专业班级</string>
    
     <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="send">发送</string>
    <string name="delete">删除</string>
    
    <!-- 课程表 -->
    <string name="current_schedule">当前课表</string>
    
    <!-- 在线评教 -->
    <string name="pj_teacher">请输入对老师的评价,限150字内</string>
    <string name="pj_lv_you">优</string>
    <string name="pj_lv_liang">良</string>
    <string name="pj_lv_zhong">中</string>
    <string name="pj_lv_cha">差</string>
    
    <!-- 校友查询  -->
    <string name="input_id_or_name_to_search">输入学号或者姓名进行查询</string>
    
    <!-- 第二课堂学分 -->
    <string name="select_your_class">请选择你的班级</string>
    
    <!-- 用户主页 -->
    <string name="temp_username">舞影凌风</string>
     <string name="zero">0</string>
      <string name="left_slide_menu_top1">二手市场</string>
	 <string name="left_slide_menu_top2">花椒问答</string>
	 <string name="left_slide_menu_top3">资料共享</string>
	 <string name="left_slide_menu_top4">我的心情</string>
	 
	 <!-- 花椒问答 -->
	 <string name="ask_new">最新问题</string>
	 <string name="ask_wait">等待回复</string>
	 <string name="ask_my">我的问题</string>
	 <string name="ask_phb">排行榜</string>
	 <string name="ask_input_tip">请输入你要提问的内容</string>
	 <string name="all_ranking">总排名</string>
	 <string name="month_ranking">当月排名</string>
	 <string name="ranking_score">积分</string>
	 
	 <!-- 自定义组件Xlist -->
	 <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- 登录注册 -->
	 <string name="login">登录</string>
    <string name="register">快速注册</string>
    <string name="register_">注册</string>
    <string name="input_stuid">请输入学号</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_nickname">请输入姓名或者昵称</string>
     <string name="select_sex">请选择你的性别</string>
    <string name="bind_stuid">输入学号进行绑定</string>
    <string name="next_step">下一步</string>	   
   <string name="reg_step1_tip">用户名和性别登录后可以修改</string>
   <string name="reg_step2_tip">如果您绑定学号可以享受更多更便捷的服务,如果没学号或者不绑定可以直接注册</string>
   <string name="reg_step3_tip">账号确定后将不可以修改</string>
  
   <!-- 资料共享 -->
	<string name="download">下载</string>
    <string name="upload">上传</string>
    <string name="select_sharing_file">请选择你要共享的文件</string>
    
    <!-- 倒计时 -->
    <string name="title">标题</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="address">地点</string>
    
    
    <!-- 修改个人信息 -->
     <string name="user_bind_stuid">绑定学号</string>
     <string name="no_bind_stuid">未绑定</string>
     <string name="user">账号</string>
     <string name="nickname">昵称</string>
     <string name="sex">性别</string>
    <string name="college">学院</string>
    <string name="head">头像</string>
    
     <!-- 设置 -->
     <string name="check_new_version">检查新版本</string>
     <string name="about">关于校园通</string>
     <string name="exit_login">退出登录</string>
     <string name="suggest">反馈建议</string>
     <string name="receive_push_message">接收推送消息</string>
     <string name="twog_load_img">2G/3G下自动加载图片</string>
     <string name="clear_cache">清除缓存</string>
     <string name="zerom">0M</string>
     <string name="auto_test_update">自动检测更新</string>
     
     <!-- 关于 -->
     <string name="about_info">花椒校园通是一款由彭炜，彭光宇开发完成的手机运用,
         旨在为华东交大学生免费提供校园服务\n\n感谢以下同学积极参与测试反馈信息:\n\t廖琦、何辉海、严敏睿、刘锦清、邓强、彭光宇、喻友文
         等等同学\n\n花椒校园通微信号:ecjtuxyt\n\n花椒校园通内测QQ群:235503522\n\n</string>
         
    <!-- 计算机紧急响应组主页:http://www.ecjtu.org\n\n计算机紧急响应组微博:http://e.weibo.com/ecjtucert -->
     <!-- 反馈建议 -->
     <string name="back_suggest">请输入你要反馈的内容</string>
     
     <!-- 成绩查询 -->
     <string name="thanks_count_score">在此鸣谢邓强提供交大均学分绩计算方法</string>
     <string name="class_ranking">班级排名:</string>
      <string name="major_ranking">专业排名:</string>
      
      <!-- 花椒社区 -->
      <string name="comment">评论(0)</string>
       <string name="re_send">转发(0)</string>
        <string name="praise">赞(0)</string>
        
      <!-- 新闻 -->
      <string name="net_sorry_tip">咦，网络好像出故障了~</string>
      
      <!-- 跳蚤市场 -->
      <string name="market_title">标题</string>
       <string name="market_title_tip">6&#8211;30字,好标题会更吸引人喔~</string>
       <string name="market_describe">描述</string>
       <string name="market_describe_tip">对商品的详细描述</string>
       <string name="publish">发布</string>
       <string name="contacts_phone">联系电话</string>
       <string name="contacts_phone_tip">能连通的电话号码(选填)</string>
       <string name="contacts_address">联系地址</string>
       <string name="contacts_address_tip">南区还是北区呢~</string>
       <string name="market_sort">商品分类</string>
       <string name="market_price">价格</string>
       <string name="market_price_tip">商品价格￥(选填)</string>
       <string name="no_goods_info">没有商品信息~</string>
       
       <!-- 好友资料 -->
       <string name="add_to_friend">加为好友</string>
       <string name="online_to_chat">在线聊天</string>
       <string name="friend_remark">备注名</string>
       <string name="friend_address">地址</string>
       <string name="friend_mood">个性签名</string>
       
       
       
       <!-- 添加好友 -->
      <string name="add_friend">添加好友</string>
     <string name="suggest_friend">推荐好友</string>
     <string name="contact_friend">通讯录好友</string>
     <string name="agree">同意</string>
     <string name="refuse">拒绝</string>
     <string name="ignore">忽略</string>
      <string name="friend_request">好友申请</string>
      <string name="friend_request_tip">申请添加您为好友</string>
      <string name="send_to_friend">发消息</string>
      
      <string name="used_sudi">常用快递</string>
      <string name="sudi_book_id">请输入包裹订单号</string>
      <string name="select_sudi_company">请选择快递公司</string>
       
</resources>
